--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.13",
-    "mongoose": "^5.4.7"
+    "mongoose": "^5.4.7",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "expect": "^24.0.0",
